--- a/clips.html
+++ b/clips.html
@@ -108,7 +108,7 @@ footer {
       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/c79n4zxTAnc?si=-1hqPpBdrGAvlHyj&amp;clip=UgkxabThirgADoR4laYG4m5P7OaNgJjqz8Dw&amp;clipt=EPOHGRi-whk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <div>
-      <h1 id="NoneInfo"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/uKsIyQZoqZI?si=qfX3rqu5Z0j_7S1i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></h1>
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/uKsIyQZoqZI?si=qfX3rqu5Z0j_7S1i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
   </div>
   <br>
