--- a/clips.html
+++ b/clips.html
@@ -115,7 +115,7 @@ footer {
   <br>
   <div id="ClipsRow">
   	<div>
-    	<h1 id="NoneInfo">No Clips yet...</h1>
+    	<iframe width="100%" height="100%" src="https://www.youtube.com/embed/z5Z92Zdlpro?si=vbovykGXlo9YFUx2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <div>
     	<h1 id="NoneInfo">No Clips yet...</h1>
