--- a/index.html
+++ b/index.html
@@ -38,6 +38,64 @@
         background-color: #04AA6D;
       }
 
+      #title {
+        color: #868786;
+        font-family: Verdana;
+        background-color: #292929;
+        border-radius: 15px;
+        padding: 10px;
+        font-weight: bold;
+      }
+
+      #desc {
+        font-family: verdana;
+        color: #A9A8A8;
+        background-color: #444444;
+        border-radius: 15px;
+        padding: 10px;
+      }
+
+      #button {
+        display: inline-block;
+        padding: 15px 25px;
+        cursor: pointer;
+        font-family: Verdana;
+        text-align: center;
+        text-decoration: none;
+        outline: none;
+        color: #fff;
+        background-color: #333;
+        border: none;
+        border-radius: 15px;
+        box-shadow: 0 9px #212121;
+        font-weight: bold;
+        transition-duration: 0.1s;
+      }
+
+      #button:hover {
+        background-color: #04AA6D;
+      }
+
+      #button:active {
+        background-color: #3e8e41;
+        box-shadow: 0 5px #666;
+        transform: translateY(4px);
+      }
+
+      #InfoHolder {
+        text-align: center;
+        width: 50%;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto;
+      }
+
+      #sep {
+        background-color: #212121;
+        width: 100%;
+        height: 2px;
+      }
+
       body {
                 background-image: url('https://i.imgur.com/jXUs4Wu.png');
                 background-size: cover; /* Adjust background size as needed */
@@ -60,9 +118,30 @@
     <li><a href="https://exkayem.github.io/K-Studios_Website/apps">Our Applications</a></li>
     <li><a href="https://exkayem.github.io/K-Studios_Website/contact">Contact Us</a></li>
     <li><a href="https://exkayem.github.io/K-Studios_Website/clips">Clips</a></li>
-    <li style="float:right;"><a href="/K-Studios_Website/profile">My Profile</a></li>
-    <li style="float:right; border-right: 0.5px solid #bbb;"><a href="https://exkayem.github.io/K-Studios_Website/about">About K-Studios</a></li>
+    <li style="float:right;"><a href="https://exkayem.github.io/K-Studios_Website/about">About K-Studios</a></li>
 </ul>
+    <br>
+    <br>
+    <div id="InfoHolder">
+      <h1 id="title">Latest Update - 03.10.2024</h1>
+      <p id="desc">Added new features to the Home page, updated the updates log, refreshed data, and fixed various bugs.</p>
+    </div>
+    <br>
+    <h1 id="sep"></h1>
+    <div id="InfoHolder">
+      <h1 id="title">ExKayEm_PL's Clips</h1>
+      <p id="desc">Discover a collection of entertaining memes and moments curated by ExKayEm_PL, along with other clips collected and highlighted by him. Click the button below to explore and enjoy some lighthearted content!</p>
+      <a href="https://exkayem.github.io/K-Studios_Website/clips" id="button">See ExKayEm_PL's Clips</a>
+    </div>
+    <br>
+    <h1 id="sep"></h1>
+    <div id="InfoHolder">
+      <h1 id="title">About K-Studios and its History</h1>
+      <p id="desc">Welcome to K-Studios! What started small has grown to about 50 users, experiencing ups and downs along the way. Each time we faced challenges, we stood back up, ultimately creating a website to host our history for eternity. Our passion for humor and creativity drives us to curate and highlight entertaining clips and memes that resonate with our audience.</p>
+      <p id="desc">Over the years, K-Studios has evolved, showcasing a mix of original creations and popular clips that celebrate meme culture. We invite you to explore our journey and see how we’ve developed into a community that values fun and connection.</p> 
+      <p id="desc">Click the link below to learn more about our history and the essence of K-Studios!</p>
+      <a href="https://exkayem.github.io/K-Studios_Website/about" id="button">See Our History</a>
+    </div>
     <br>
     <br>
     <footer>
