--- a/about.html
+++ b/about.html
@@ -111,8 +111,7 @@ footer {
             <li><a href="https://exkayem.github.io/K-Studios_Website/apps">Our Applications</a></li>
             <li><a href="https://exkayem.github.io/K-Studios_Website/contact">Contact Us</a></li>
             <li><a href="https://exkayem.github.io/K-Studios_Website/clips">Clips</a></li>
-            <li style="float:right;"><a href="/K-Studios_Website/profile">My Profile</a></li>
-            <li class="active" style="float:right; border-right: 0.5px solid #bbb;"><a class="active" href="https://exkayem.github.io/K-Studios_Website/about">About K-Studios</a></li>
+            <li class="active" style="float:right;"><a class="active" href="https://exkayem.github.io/K-Studios_Website/about">About K-Studios</a></li>
         </ul>
 
     <h1 align="center" style="font-family:verdana;">K-Studios® Team</h1>
