--- a/clips.html
+++ b/clips.html
@@ -138,15 +138,26 @@ footer {
   </div>
   <br>
   <br>
-   <div id="ClipsRow">
-  	<div>
-    	<h1 id="NoneInfo">No Clips yet...</h1>
+  <div id="ClipsRow">
+      <div>
+   	        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Xwpq9jcmbp4?si=nPrOZkfkfN-ZC4wi&amp;clip=UgkxjsQlcoshqRYD53cKcqp7VYXnf56ZabbC&amp;clipt=ELCeARit-AI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+       </div>
+       <div>
+    	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Xwpq9jcmbp4?si=3S7xVsBRI79MAlU_&amp;clip=Ugkxe26K03pgL3BioeYm3JO_KgjTyXbwjHvs&amp;clipt=EISpAxjn1wM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+       </div>
+        <div>
+    	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Xwpq9jcmbp4?si=OUpvdfMU_039owHy&amp;clip=UgkxepvILNUaCvll1GqTPe4IcoYaChrFSTf1&amp;clipt=EPu8CRib6wk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+ </div>
+ <div id="ClipsRow">
+     <div>
+    	<iframe width="100%" height="100%" src="https://www.youtube.com/embed/Xwpq9jcmbp4?si=Nnyp4WJzFu4mpztW&amp;clip=Ugkxa0omxNo7If9M67tE-9-CLBME7ZphsrFK&amp;clipt=EP3xCRikgQs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <div>
-    	<h1 id="NoneInfo">No Clips yet...</h1>
+    	<iframe width="100%" height="100%" src="https://www.youtube.com/embed/LciMNTgGEfc?si=3DSROiXkHScg_hUL&amp;clip=UgkxPqzDUDm6VuGrZVXLzCY5iYdSGpSrn6_D&amp;clipt=EM21Dhjr8A4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <div>
-    	<h1 id="NoneInfo">No Clips yet...</h1>
+    	<iframe width="100%" height="100%" src="https://www.youtube.com/embed/LciMNTgGEfc?si=IURMDjJObWGKETJC&amp;clip=Ugkx5XlZWgDuejbv3GGOoHCejGvgD-reMIka&amp;clipt=EOeGERjvrRE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
   </div>
   <br>
