--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
     <br>
     <br>
     <div id="InfoHolder">
-      <h1 id="title">Latest Update - 03.10.2024</h1>
-      <p id="desc">Added new features to the Home page, updated the updates log, refreshed data, and fixed various bugs.</p>
+      <h1 id="title">Latest Update - 07.10.2024</h1>
+      <p id="desc">We’ve just added 6 new clips to the Clips section! Head over and check them out!</p>
     </div>
     <br>
     <h1 id="sep"></h1>
